# explorie

./: .env.example  .gitattributes  .gitignore  .prettierignore  Cargo.toml  LICENSE  README.md  eslint.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build-release.yml  ci.yml
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/desktop/frontend/: .env.example  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/frontend/src/: App.module.css  App.quicklook.test.tsx  App.tsx  conflictResolutionStore.test.ts  conflictResolutionStore.ts  dirSizeCache.test.ts  dirSizeCache.ts  icons.ts  index.css  main.rs  main.test.tsx  main.tsx  operationQueueStore.test.ts  operationQueueStore.ts  store.test.ts  store.ts  undoRedoStore.test.ts  undoRedoStore.ts  updateStore.test.ts  updateStore.ts  vite-env.d.ts
apps/desktop/frontend/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
apps/desktop/frontend/src-tauri/icons/: icon.icns
apps/desktop/frontend/src-tauri/macos/: MountBridge.m  MountDaemon.m  MountHelper.h  com.omershatz.explorie.mountd.plist
apps/desktop/frontend/src-tauri/resources/: winfsp-NOTICE.txt
apps/desktop/frontend/src-tauri/src/: main.rs  remote_drives.rs
apps/desktop/frontend/src/components/: ArchiveDialog.module.css  ArchiveDialog.test.tsx  ArchiveDialog.tsx  AutoUpdater.test.tsx  AutoUpdater.tsx  BatchRenameDialog.module.css  BatchRenameDialog.test.tsx  BatchRenameDialog.tsx  Breadcrumbs.module.css  Breadcrumbs.test.tsx  Breadcrumbs.tsx  ChromeComponents.test.tsx  ColumnView.module.css  ColumnView.test.tsx  ColumnView.tsx  CommandPalette.module.css  CommandPalette.test.tsx  CommandPalette.tsx  ConfirmDialog.module.css  ConfirmDialog.test.tsx  ConfirmDialog.tsx  ConflictResolutionDialog.module.css  ConflictResolutionDialog.test.tsx  ConflictResolutionDialog.tsx  ContextMenu.module.css  ContextMenu.test.tsx  ContextMenu.tsx  CustomFieldsEditor.module.css  CustomFieldsEditor.test.tsx  CustomFieldsEditor.tsx  DebugPanel.module.css  DebugPanel.test.tsx  DebugPanel.tsx  DiffViewer.module.css  DiffViewer.test.tsx  DiffViewer.tsx  DragOverlay.test.tsx  DragOverlay.tsx  ErrorBoundary.module.css  ErrorBoundary.tsx  (+85 more)
apps/desktop/frontend/src/hooks/: useAnnounce.test.ts  useAnnounce.ts  useAppCommands.test.ts  useAppCommands.ts  useAppKeyboardShortcuts.test.ts  useAppKeyboardShortcuts.ts  useAppLayoutPersistence.test.ts  useAppLayoutPersistence.ts  useCentralFileSelection.test.tsx  useCentralFileSelection.ts  useCrashRecovery.test.ts  useCrashRecovery.ts  useDirSize.test.ts  useDirSize.ts  useDragStart.test.ts  useDragStart.ts  useFileDragAndDrop.test.ts  useFileDragAndDrop.ts  useFocusTrap.test.tsx  useFocusTrap.ts  useInitialPath.test.ts  useInitialPath.ts  useKeyboardClipboard.test.ts  useKeyboardClipboard.ts  useMarqueeSelection.test.tsx  useMarqueeSelection.ts  useNavigationHandlers.test.ts  useNavigationHandlers.ts  useNavigationHistory.test.ts  useNavigationHistory.ts  useQuickLookController.test.ts  useQuickLookController.ts  useTabs.test.ts  useTabs.ts  useVirtualGrid.test.ts  useVirtualGrid.ts  useVirtualRows.test.ts  useVirtualRows.ts  useWorkspaceManager.test.ts  useWorkspaceManager.ts
apps/desktop/frontend/src/services/: finderIntegration.test.ts  finderIntegration.ts  updater.test.ts  updater.ts
apps/desktop/frontend/src/store/: types.ts
apps/desktop/frontend/src/test/: setup.ts
apps/desktop/frontend/src/utils/: accessibility.test.ts  accessibility.ts  crashRecovery.test.ts  crashRecovery.ts  customColumns.ts  customFieldTypes.test.ts  customFieldTypes.ts  date.test.ts  date.ts  debounce.ts  diagnosticsReport.test.ts  diagnosticsReport.ts  errorMessages.test.ts  errorMessages.ts  errorReporter.test.ts  errorReporter.ts  fileName.test.ts  (+31 more)
crates/core/: Cargo.toml
crates/core/src/: archive.rs  file_operations.rs  lib.rs
crates/core/tests/: metadata.rs
crates/ffmpeg-wrapper/: Cargo.toml
crates/ffmpeg-wrapper/src/: lib.rs
crates/plugin-host/: Cargo.toml
crates/plugin-host/src/: lib.rs
sample/: .explorie.json  app.js  data.json
scripts/: prepare-rclone.mjs  prepare-winfsp.mjs  release-check.mjs  release-check.test.mjs
tests/: e2e.spec.ts
(+6 files in other folders)
