[package]
name = "explorie-cli"
version = "0.1.0"
edition = "2024"
authors = ["explorie contributors"]
description = "explorie CLI companion"
license = "MIT"
repository = "https://github.com/oshtz/explorie"

[dependencies]
explorie-core = { path = "../../crates/core" }
explorie-plugin-host = { path = "../../crates/plugin-host" }
explorie-ffmpeg-wrapper = { path = "../../crates/ffmpeg-wrapper" }
serde_json = "1.0"

[[bin]]
name = "explorie"
path = "src/main.rs"
