[package]
name = "explorie-cli"
version = "0.1.0"
edition = "2024"
authors = ["explorie contributors"]
description = "explorie CLI companion"
license = "MIT"
repository = "https://github.com/oshtz/explorie"

[dependencies]
explorie-core = { path = "../../crates/core" }
explorie-ffmpeg-wrapper = { path = "../../crates/ffmpeg-wrapper" }

[[bin]]
name = "explorie"
path = "src/main.rs"
