[package]
name = "explorie-core"
version = "0.1.0"
edition = "2024"
authors = ["explorie contributors"]
description = "Core business logic for explorie file manager."
license = "MIT"
repository = "https://github.com/oshtz/explorie"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["v4", "v5", "serde"] }
rayon = "1.10"
zip = { version = "2.2", default-features = false, features = ["deflate", "bzip2", "zstd", "time", "aes-crypto"] }
walkdir = "2.5"
flate2 = "1.0"
tar = "0.4"
unrar = "0.5"
sevenz-rust = { version = "0.6", features = ["aes256", "compress"] }
tracing = "0.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
# Windows-specific dependencies if needed

[dev-dependencies]
tempfile = "3.9"
