[package]
name = "explorie-plugin-host"
version = "0.1.0"
edition = "2024"
authors = ["explorie contributors"]
description = "Plugin host for explorie (dlopen + WASM runtime)"
license = "MIT"
repository = "https://github.com/oshtz/explorie"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libloading = "0.8"
thiserror = "1.0"

[features]
default = []
# Enable WASM plugin support (requires wasmtime)
wasm = ["dep:wasmtime"]

[dependencies.wasmtime]
version = "38"
optional = true
