[package]
name = "explorie-desktop"
version = "0.2.2"
edition = "2024"
description = "explorie desktop app (Tauri + React)"
build = "build.rs"
authors = ["explorie contributors"]
license = "MIT"
repository = "https://github.com/oshtz/explorie"

[dependencies]
tauri = { version = "2.11.1", features = ["protocol-asset"] }
tauri-plugin-fs = "2.2.1"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-single-instance = "2.4.2"
explorie-core = { path = "../../../../crates/core" }
dirs = "5.0.1"
sysinfo = "0.30.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["v4"] }
open = "5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[target.'cfg(target_os = "macos")'.build-dependencies]
cc = "1"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
sha2 = "0.10"

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }
